<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bizhi"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="0dp"
         >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.65"
                    android:text="@string/iplabal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/red" />

                <EditText
                    android:id="@+id/IpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:ems="10"
                    android:text="@string/default_ip" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.65"
                    android:text="@string/socketlabel"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/red" />

                <EditText
                    android:id="@+id/SocketEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.3"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/default_socket" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="0dp"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/getserip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="获取电脑IP地址" />

                <Button
                    android:id="@+id/ConnectButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/connectButton" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/imageButton_shubiao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/shubiao" />

                    <ImageButton
                        android:id="@+id/imageButton2_jianpan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/jianpan" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1" >

                    <ImageButton
                        android:id="@+id/imageButton3_shoubing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/shoubing" />

                    <ImageButton
                        android:id="@+id/imageButton4_kongzhi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/kongzhi" />

                </LinearLayout>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:lines="3"
                android:text="@string/help"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:textColor="@color/red" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:gravity="right|center"
                android:text="@string/aboutlabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

        </TableRow>

    </TableLayout>

</RelativeLayout>

 <!--   android:layout_marginTop="44dp"-->